--- a/tradie/configs/config-android.json
+++ b/tradie/configs/config-android.json
@@ -14,8 +14,8 @@
   "coloredLogs" : true,
   "bail" : 0,
   "screenshotPath" : "./errorShots/",
-  "username" : "jaspreetbamrah@hipagesgroup.com.au",
-  "password" : "dvmsq8v7qtnb9knrtvfk6k84",
+  "username" : "muthuraj.bharathi@sstsinc.com",
+  "password" : "pdfb8wwnf9nfvrwqfxdzq5sn",
   "appname" : "tradie.apk",
   "oSversion":"6.0.1",
   "count":1,
