--- a/tradie/package.json
+++ b/tradie/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "colors": "^1.1.2",
     "deepmerge": "^1.3.2",
     "eslint": "^2.8.0",
-    "wdio-jasmine-framework": "^0.3.1",
-    "wdio-spec-reporter": "^0.1.0",
-    "webdriverio": "4.7.1",
-    "colors": "^1.1.2",
     "express": "^4.15.4",
     "promise": "^8.0.1",
     "readline": "^1.3.0",
     "request": "^2.83.0",
-    "tracer": "^0.8.11"
+    "tracer": "^0.8.11",
+    "wdio-jasmine-framework": "^0.3.1",
+    "wdio-mocha-framework": "^0.5.13",
+    "wdio-spec-reporter": "^0.1.0",
+    "webdriverio": "4.7.1"
   },
   "scripts": {
     "start": "",
